# task-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter-check.yml  test-coverage.yml  tests-check.yml
task_manager/: main.py  settings.py
tests/: test_status.py
