[tool.poetry]
name = "Task Manager"
version = "0.1.0"
description = "An app for tasks manage"
authors = [
    "Olga Melikhova <melihova.o@yandex.ru>",
    "pecheritsa <pecheritsa.roman@gmail.com>",
    "Ilia Kaziamov <kaziamov@outlook.com>",
]
readme = "README.md"
packages = [{ include = "task_manager" }]


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
fastapi = "^0.112.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
uvicorn = "^0.30.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
mypy = "^1.11.1"
pylint = "^3.2.6"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
